C++/Calculadora-1/expresiones.output
Gramática

    0 $accept: entrada $end

    1 entrada: %empty
    2        | entrada linea

    3 linea: error '\n'
    4      | IDENTIFICADOR ASIG expr '\n'
    5      | IDENTIFICADOR ASIG exprBool '\n'

    6 exprBool: CIERTO
    7         | FALSO
    8         | exprBool IGUAL exprBool
    9         | exprBool DISTINTO exprBool
   10         | exprBool Y exprBool
   11         | exprBool O exprBool
   12         | NO exprBool
   13         | expr IGUAL expr
   14         | expr DISTINTO expr
   15         | expr '<' expr
   16         | expr '>' expr
   17         | expr MENORI expr
   18         | expr MAYORI expr
   19         | '(' exprBool ')'

   20 expr: ENTERO
   21     | REAL
   22     | IDENTIFICADOR
   23     | expr '+' expr
   24     | expr '-' expr
   25     | expr '*' expr
   26     | expr '/' expr
   27     | expr '%' expr
   28     | '(' expr ')'
   29     | '-' expr


Terminales con las reglas donde aparecen

    $end (0) 0
    '\n' (10) 3 4 5
    '%' (37) 27
    '(' (40) 19 28
    ')' (41) 19 28
    '*' (42) 25
    '+' (43) 23
    '-' (45) 24 29
    '/' (47) 26
    '<' (60) 15
    '>' (62) 16
    error (256) 3
    IDENTIFICADOR <c_cadena> (258) 4 5 22
    ENTERO <c_entero> (259) 20
    REAL <c_real> (260) 21
    ASIG (261) 4 5
    CIERTO (262) 6
    FALSO (263) 7
    MAYORI (264) 18
    MENORI (265) 17
    IGUAL (266) 8 13
    DISTINTO (267) 9 14
    Y (268) 10
    O (269) 11
    NO (270) 12
    menos (271)


No terminales con las reglas donde aparecen

    $accept (27)
        on left: 0
    entrada (28)
        on left: 1 2
        on right: 0 2
    linea (29)
        on left: 3 4 5
        on right: 2
    exprBool <c_bool> (30)
        on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 5 8 9 10 11 12 19
    expr <c_expresion> (31)
        on left: 20 21 22 23 24 25 26 27 28 29
        on right: 4 13 14 15 16 17 18 23 24 25 26 27 28 29


Estado 0

    0 $accept: . entrada $end

    $default  reduce usando la regla 1 (entrada)

    entrada  ir al estado 1


Estado 1

    0 $accept: entrada . $end
    2 entrada: entrada . linea

    $end           desplazar e ir al estado 2
    error          desplazar e ir al estado 3
    IDENTIFICADOR  desplazar e ir al estado 4

    linea  ir al estado 5


Estado 2

    0 $accept: entrada $end .

    $default  aceptar


Estado 3

    3 linea: error . '\n'

    '\n'  desplazar e ir al estado 6


Estado 4

    4 linea: IDENTIFICADOR . ASIG expr '\n'
    5      | IDENTIFICADOR . ASIG exprBool '\n'

    ASIG  desplazar e ir al estado 7


Estado 5

    2 entrada: entrada linea .

    $default  reduce usando la regla 2 (entrada)


Estado 6

    3 linea: error '\n' .

    $default  reduce usando la regla 3 (linea)


Estado 7

    4 linea: IDENTIFICADOR ASIG . expr '\n'
    5      | IDENTIFICADOR ASIG . exprBool '\n'

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    CIERTO         desplazar e ir al estado 11
    FALSO          desplazar e ir al estado 12
    NO             desplazar e ir al estado 13
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 15

    exprBool  ir al estado 16
    expr      ir al estado 17


Estado 8

   22 expr: IDENTIFICADOR .

    $default  reduce usando la regla 22 (expr)


Estado 9

   20 expr: ENTERO .

    $default  reduce usando la regla 20 (expr)


Estado 10

   21 expr: REAL .

    $default  reduce usando la regla 21 (expr)


Estado 11

    6 exprBool: CIERTO .

    $default  reduce usando la regla 6 (exprBool)


Estado 12

    7 exprBool: FALSO .

    $default  reduce usando la regla 7 (exprBool)


Estado 13

   12 exprBool: NO . exprBool

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    CIERTO         desplazar e ir al estado 11
    FALSO          desplazar e ir al estado 12
    NO             desplazar e ir al estado 13
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 15

    exprBool  ir al estado 18
    expr      ir al estado 19


Estado 14

   29 expr: '-' . expr

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 20

    expr  ir al estado 21


Estado 15

   19 exprBool: '(' . exprBool ')'
   28 expr: '(' . expr ')'

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    CIERTO         desplazar e ir al estado 11
    FALSO          desplazar e ir al estado 12
    NO             desplazar e ir al estado 13
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 15

    exprBool  ir al estado 22
    expr      ir al estado 23


Estado 16

    5 linea: IDENTIFICADOR ASIG exprBool . '\n'
    8 exprBool: exprBool . IGUAL exprBool
    9         | exprBool . DISTINTO exprBool
   10         | exprBool . Y exprBool
   11         | exprBool . O exprBool

    IGUAL     desplazar e ir al estado 24
    DISTINTO  desplazar e ir al estado 25
    Y         desplazar e ir al estado 26
    O         desplazar e ir al estado 27
    '\n'      desplazar e ir al estado 28


Estado 17

    4 linea: IDENTIFICADOR ASIG expr . '\n'
   13 exprBool: expr . IGUAL expr
   14         | expr . DISTINTO expr
   15         | expr . '<' expr
   16         | expr . '>' expr
   17         | expr . MENORI expr
   18         | expr . MAYORI expr
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr

    MAYORI    desplazar e ir al estado 29
    MENORI    desplazar e ir al estado 30
    IGUAL     desplazar e ir al estado 31
    DISTINTO  desplazar e ir al estado 32
    '<'       desplazar e ir al estado 33
    '>'       desplazar e ir al estado 34
    '+'       desplazar e ir al estado 35
    '-'       desplazar e ir al estado 36
    '*'       desplazar e ir al estado 37
    '/'       desplazar e ir al estado 38
    '%'       desplazar e ir al estado 39
    '\n'      desplazar e ir al estado 40


Estado 18

    8 exprBool: exprBool . IGUAL exprBool
    9         | exprBool . DISTINTO exprBool
   10         | exprBool . Y exprBool
   11         | exprBool . O exprBool
   12         | NO exprBool .

    $default  reduce usando la regla 12 (exprBool)


Estado 19

   13 exprBool: expr . IGUAL expr
   14         | expr . DISTINTO expr
   15         | expr . '<' expr
   16         | expr . '>' expr
   17         | expr . MENORI expr
   18         | expr . MAYORI expr
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr

    MAYORI    desplazar e ir al estado 29
    MENORI    desplazar e ir al estado 30
    IGUAL     desplazar e ir al estado 31
    DISTINTO  desplazar e ir al estado 32
    '<'       desplazar e ir al estado 33
    '>'       desplazar e ir al estado 34
    '+'       desplazar e ir al estado 35
    '-'       desplazar e ir al estado 36
    '*'       desplazar e ir al estado 37
    '/'       desplazar e ir al estado 38
    '%'       desplazar e ir al estado 39


Estado 20

   28 expr: '(' . expr ')'

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 20

    expr  ir al estado 41


Estado 21

   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr
   29     | '-' expr .

    $default  reduce usando la regla 29 (expr)


Estado 22

    8 exprBool: exprBool . IGUAL exprBool
    9         | exprBool . DISTINTO exprBool
   10         | exprBool . Y exprBool
   11         | exprBool . O exprBool
   19         | '(' exprBool . ')'

    IGUAL     desplazar e ir al estado 24
    DISTINTO  desplazar e ir al estado 25
    Y         desplazar e ir al estado 26
    O         desplazar e ir al estado 27
    ')'       desplazar e ir al estado 42


Estado 23

   13 exprBool: expr . IGUAL expr
   14         | expr . DISTINTO expr
   15         | expr . '<' expr
   16         | expr . '>' expr
   17         | expr . MENORI expr
   18         | expr . MAYORI expr
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr
   28     | '(' expr . ')'

    MAYORI    desplazar e ir al estado 29
    MENORI    desplazar e ir al estado 30
    IGUAL     desplazar e ir al estado 31
    DISTINTO  desplazar e ir al estado 32
    '<'       desplazar e ir al estado 33
    '>'       desplazar e ir al estado 34
    '+'       desplazar e ir al estado 35
    '-'       desplazar e ir al estado 36
    '*'       desplazar e ir al estado 37
    '/'       desplazar e ir al estado 38
    '%'       desplazar e ir al estado 39
    ')'       desplazar e ir al estado 43


Estado 24

    8 exprBool: exprBool IGUAL . exprBool

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    CIERTO         desplazar e ir al estado 11
    FALSO          desplazar e ir al estado 12
    NO             desplazar e ir al estado 13
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 15

    exprBool  ir al estado 44
    expr      ir al estado 19


Estado 25

    9 exprBool: exprBool DISTINTO . exprBool

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    CIERTO         desplazar e ir al estado 11
    FALSO          desplazar e ir al estado 12
    NO             desplazar e ir al estado 13
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 15

    exprBool  ir al estado 45
    expr      ir al estado 19


Estado 26

   10 exprBool: exprBool Y . exprBool

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    CIERTO         desplazar e ir al estado 11
    FALSO          desplazar e ir al estado 12
    NO             desplazar e ir al estado 13
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 15

    exprBool  ir al estado 46
    expr      ir al estado 19


Estado 27

   11 exprBool: exprBool O . exprBool

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    CIERTO         desplazar e ir al estado 11
    FALSO          desplazar e ir al estado 12
    NO             desplazar e ir al estado 13
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 15

    exprBool  ir al estado 47
    expr      ir al estado 19


Estado 28

    5 linea: IDENTIFICADOR ASIG exprBool '\n' .

    $default  reduce usando la regla 5 (linea)


Estado 29

   18 exprBool: expr MAYORI . expr

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 20

    expr  ir al estado 48


Estado 30

   17 exprBool: expr MENORI . expr

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 20

    expr  ir al estado 49


Estado 31

   13 exprBool: expr IGUAL . expr

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 20

    expr  ir al estado 50


Estado 32

   14 exprBool: expr DISTINTO . expr

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 20

    expr  ir al estado 51


Estado 33

   15 exprBool: expr '<' . expr

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 20

    expr  ir al estado 52


Estado 34

   16 exprBool: expr '>' . expr

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 20

    expr  ir al estado 53


Estado 35

   23 expr: expr '+' . expr

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 20

    expr  ir al estado 54


Estado 36

   24 expr: expr '-' . expr

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 20

    expr  ir al estado 55


Estado 37

   25 expr: expr '*' . expr

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 20

    expr  ir al estado 56


Estado 38

   26 expr: expr '/' . expr

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 20

    expr  ir al estado 57


Estado 39

   27 expr: expr '%' . expr

    IDENTIFICADOR  desplazar e ir al estado 8
    ENTERO         desplazar e ir al estado 9
    REAL           desplazar e ir al estado 10
    '-'            desplazar e ir al estado 14
    '('            desplazar e ir al estado 20

    expr  ir al estado 58


Estado 40

    4 linea: IDENTIFICADOR ASIG expr '\n' .

    $default  reduce usando la regla 4 (linea)


Estado 41

   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr
   28     | '(' expr . ')'

    '+'  desplazar e ir al estado 35
    '-'  desplazar e ir al estado 36
    '*'  desplazar e ir al estado 37
    '/'  desplazar e ir al estado 38
    '%'  desplazar e ir al estado 39
    ')'  desplazar e ir al estado 43


Estado 42

   19 exprBool: '(' exprBool ')' .

    $default  reduce usando la regla 19 (exprBool)


Estado 43

   28 expr: '(' expr ')' .

    $default  reduce usando la regla 28 (expr)


Estado 44

    8 exprBool: exprBool . IGUAL exprBool
    8         | exprBool IGUAL exprBool .
    9         | exprBool . DISTINTO exprBool
   10         | exprBool . Y exprBool
   11         | exprBool . O exprBool

    $default  reduce usando la regla 8 (exprBool)


Estado 45

    8 exprBool: exprBool . IGUAL exprBool
    9         | exprBool . DISTINTO exprBool
    9         | exprBool DISTINTO exprBool .
   10         | exprBool . Y exprBool
   11         | exprBool . O exprBool

    $default  reduce usando la regla 9 (exprBool)


Estado 46

    8 exprBool: exprBool . IGUAL exprBool
    9         | exprBool . DISTINTO exprBool
   10         | exprBool . Y exprBool
   10         | exprBool Y exprBool .
   11         | exprBool . O exprBool

    IGUAL     desplazar e ir al estado 24
    DISTINTO  desplazar e ir al estado 25

    $default  reduce usando la regla 10 (exprBool)


Estado 47

    8 exprBool: exprBool . IGUAL exprBool
    9         | exprBool . DISTINTO exprBool
   10         | exprBool . Y exprBool
   11         | exprBool . O exprBool
   11         | exprBool O exprBool .

    IGUAL     desplazar e ir al estado 24
    DISTINTO  desplazar e ir al estado 25
    Y         desplazar e ir al estado 26

    $default  reduce usando la regla 11 (exprBool)


Estado 48

   18 exprBool: expr MAYORI expr .
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr

    '+'  desplazar e ir al estado 35
    '-'  desplazar e ir al estado 36
    '*'  desplazar e ir al estado 37
    '/'  desplazar e ir al estado 38
    '%'  desplazar e ir al estado 39

    $default  reduce usando la regla 18 (exprBool)


Estado 49

   17 exprBool: expr MENORI expr .
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr

    '+'  desplazar e ir al estado 35
    '-'  desplazar e ir al estado 36
    '*'  desplazar e ir al estado 37
    '/'  desplazar e ir al estado 38
    '%'  desplazar e ir al estado 39

    $default  reduce usando la regla 17 (exprBool)


Estado 50

   13 exprBool: expr IGUAL expr .
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr

    '+'  desplazar e ir al estado 35
    '-'  desplazar e ir al estado 36
    '*'  desplazar e ir al estado 37
    '/'  desplazar e ir al estado 38
    '%'  desplazar e ir al estado 39

    $default  reduce usando la regla 13 (exprBool)


Estado 51

   14 exprBool: expr DISTINTO expr .
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr

    '+'  desplazar e ir al estado 35
    '-'  desplazar e ir al estado 36
    '*'  desplazar e ir al estado 37
    '/'  desplazar e ir al estado 38
    '%'  desplazar e ir al estado 39

    $default  reduce usando la regla 14 (exprBool)


Estado 52

   15 exprBool: expr '<' expr .
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr

    '+'  desplazar e ir al estado 35
    '-'  desplazar e ir al estado 36
    '*'  desplazar e ir al estado 37
    '/'  desplazar e ir al estado 38
    '%'  desplazar e ir al estado 39

    $default  reduce usando la regla 15 (exprBool)


Estado 53

   16 exprBool: expr '>' expr .
   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr

    '+'  desplazar e ir al estado 35
    '-'  desplazar e ir al estado 36
    '*'  desplazar e ir al estado 37
    '/'  desplazar e ir al estado 38
    '%'  desplazar e ir al estado 39

    $default  reduce usando la regla 16 (exprBool)


Estado 54

   23 expr: expr . '+' expr
   23     | expr '+' expr .
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr

    '*'  desplazar e ir al estado 37
    '/'  desplazar e ir al estado 38
    '%'  desplazar e ir al estado 39

    $default  reduce usando la regla 23 (expr)


Estado 55

   23 expr: expr . '+' expr
   24     | expr . '-' expr
   24     | expr '-' expr .
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr

    '*'  desplazar e ir al estado 37
    '/'  desplazar e ir al estado 38
    '%'  desplazar e ir al estado 39

    $default  reduce usando la regla 24 (expr)


Estado 56

   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   25     | expr '*' expr .
   26     | expr . '/' expr
   27     | expr . '%' expr

    $default  reduce usando la regla 25 (expr)


Estado 57

   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   26     | expr '/' expr .
   27     | expr . '%' expr

    $default  reduce usando la regla 26 (expr)


Estado 58

   23 expr: expr . '+' expr
   24     | expr . '-' expr
   25     | expr . '*' expr
   26     | expr . '/' expr
   27     | expr . '%' expr
   27     | expr '%' expr .

    $default  reduce usando la regla 27 (expr)
